[gd_scene load_steps=3 format=3 uid="uid://dmqb4amfevxgc"]

[ext_resource type="LabelSettings" uid="uid://cs7avlu3n5kj1" path="res://assets/LG_48_Red.tres" id="1_1qffq"]
[ext_resource type="Script" path="res://game_over/game_over.gd" id="1_o1ax7"]

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_o1ax7")

[node name="GameOverLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -0.5
offset_top = -11.5
offset_right = 0.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "GAME OVER"
label_settings = ExtResource("1_1qffq")
horizontal_alignment = 1
vertical_alignment = 1

[node name="PressedSpaceLabel" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -0.5
offset_top = -11.5
offset_right = 0.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "PRESS SPACE"
label_settings = ExtResource("1_1qffq")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
